--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>·
+        <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
             The ability for humanoid robots to perform complex tasks, such as box climbing, while maintaining balance, 
